--- a/index.html
+++ b/index.html
@@ -15,16 +15,28 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: pink;">
             <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img class="logo" src="unicorn.png">
-                </a>
 
+                <a class="navbar-brand" href="#">
+                    Xuan
+                </a>
+                
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#">Features</a>
+                        <a class="nav-item nav-link" href="#">Pricing</a>
+                        <a class="nav-item nav-link disabled" href="#">Disabled</a>
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
 
-    <main>
-        <div class="container">
+    <main class="container">
+        <div>
             <h1>Hello, world!</h1>
         </div>
     </main>
