--- a/index.html
+++ b/index.html
@@ -13,22 +13,30 @@
   <body>
               
     <header>
-        <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: pink;">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #3F69AA;">
             <div class="container">
+                <div class="row" style="width:100%">
+                    <div class="col-5">
+                        <a class="navbar-brand" href="#">
+                            Xuan
+                        </a>
+                    </div>    
+                    <div class="col-2">
+                        <img class="ml-auto" src="xuan.png" height="75px" width="75px">
+                    </div>
 
-                <a class="navbar-brand" href="#">
-                    Xuan
-                </a>
-                
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="#">Features</a>
-                        <a class="nav-item nav-link" href="#">Pricing</a>
-                        <a class="nav-item nav-link disabled" href="#">Disabled</a>
+                    <div class=col-5 style="margin-top:auto; margin-bottom:auto;">
+                        <button class="navbar-toggler" style="float:right;" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav ml-auto">
+                                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-item nav-link" href="#">Furry</a>
+                                <a class="nav-item nav-link" href="#">Math</a>
+                                <a class="nav-item nav-link disabled" href="#">Respectability (Disabled)</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -37,7 +45,7 @@
 
     <main class="container">
         <div>
-            <h1>Hello, world!</h1>
+            <p>Hello, world!</p>
         </div>
     </main>
 
@@ -45,7 +53,18 @@
     <footer>
 
     </footer>
-
+    <script type="text/javascript">
+        var delay = 30; 
+        var positionb = 0; 
+        function scrollBackGround(){ 
+             positionb = positionb - 1; 
+             if (positionb < -10000) positionb = 0; 
+             document.getElementById('stuff').style.backgroundPosition = positionb + "px 0px"; 
+             window.setTimeout('scrollBackGround()',delay); 
+        } 
+        scrollBackGround(); 
+        //-->
+    </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
